# RAG_Practice

./: .gitignore  README.md  WORKLOG.md  launch_table_pipeline.bat  pipeline.py  pyproject.toml  test.py
docs/: all_hwp_docname_eval_summary.md  document_extraction_review_plan.md  hwp_block_routing_rules.md  hwp_extraction_gap_review.md  hwp_table_classification_notes.md  hwp_table_enrichment_results.md  table_pipeline_changes.md
ocr/: analyze_hwp_sample_batch.py  build_hwp_ocr_payload.py  build_hwp_review_pack.py  discarded_shortlist.md  discarded_table_review.md  extract_hwp_artifacts.py  extract_visual_artifacts.py  format_hwp_ocr_for_rag.py  hwp_review_pack.md  report_table_recovery.py  run_hwp_ocr_pipeline.py  second_pass_comparison.md  select_documents.py  table_block_extractor.py  windows_ocr_fallback.ps1
rag_system/: __init__.py  config.py  dump_eval_questions_table_context.py  eval_questions_table_runner.py  evaluate.py  evaluate_table_focus.py  evaluate_table_retrieval_cases.py  ingest.py  qa.py  rag_utils.py
rag_system/table_pipeline/: README.md  additional_table_cases.py  all_hwp_docname_cases.py  dump_eval_questions_table_context.py  evaluate_additional_table_cases.py  evaluate_all_hwp_docname_cases.py  evaluate_table_retrieval.py  evaluate_table_retrieval_cases.py  launcher.py  rag_utils.py  table_enrichment.py
table_pipeline/: README.md  __init__.py  launcher.py  rag_utils.py  table_enrichment.py
table_pipeline/evaluation/: __init__.py  dump_eval_questions_table_context.py  evaluate_additional_table_cases.py  evaluate_all_hwp_docname_cases.py  (+4 more)
(+4 files in other folders)
